# baselode

./: .gitignore  ATTRIBUTION.md  PARITY_SPEC.md  README.md  RELEASING.md  environment.yml
.github/workflows/: release.yml  test-build.yml
demo-viewer-dash/: README.md  app.py  asgi.py  requirements.txt
demo-viewer-dash/assets/: app.css  baselode-style.css  baselode.js  drillhole3d.html
demo-viewer-react/: package-lock.json
demo-viewer-react/app/: README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
demo-viewer-react/app/public/data/gswa/: README.md  demo_gswa_sample_collars.csv
demo-viewer-react/app/scripts/: generate_precomputed_desurvey.mjs  vercel-build.sh
demo-viewer-react/app/src/: App.css  App.jsx  index.css  main.jsx
demo-viewer-react/app/src/components/: Baselode3DControls.css  Baselode3DControls.jsx  Layout.jsx  Sidebar.css  Sidebar.jsx
demo-viewer-react/app/src/context/: DemoDataContext.jsx  DrillConfigContext.jsx  ZoomContext.jsx
demo-viewer-react/app/src/data/: demoGswaData.js
demo-viewer-react/app/src/lib/: assayDataLoader.js  assayLoader.js  baselode3dScene.js  blockScene.js  desurvey.js  drillholeViz.js
demo-viewer-react/app/src/pages/: Attribution.css  Attribution.jsx  BlockModel.css  BlockModel.jsx  Config.css  Config.jsx  CorePhoto.css  CorePhoto.jsx  Drillhole.css  Drillhole.jsx  Drillhole2D.css  Drillhole2D.jsx  Home.css  Home.jsx  Placeholder.css  PolygonBlocks.css  PolygonBlocks.jsx  RasterDemo.jsx
docs/: demos.md  getting-started.md  index.md  package-lock.json  package.json  release-notes.md  vercel.json
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css
docs/api/: javascript.md  python.md
docs/guide/: core-photo-viewer.md  javascript.md  python.md
notebooks/: test_drillholes.ipynb  test_sample_data.ipynb
python/: MANIFEST.in  pyproject.toml  requirements.txt
python/src/: README.md  pyproject.toml
python/src/baselode/: README.md  __init__.py  baselode_dark_template.py  colours.py  datamodel.py  extent.py  map.py  template.py
python/src/baselode/blockmodel/: __init__.py  data.py  validate.py
python/src/baselode/drill/: __init__.py  columns.py  composite.py  data.py  desurvey.py  intercepts.py  model.py  structural.py  validate.py  view.py  view_2d.py  view_3d.py
python/src/baselode/grade_blocks/: data.py  validate.py
scripts/: fix_desurvey_elevation.py
src/: requirements.txt
src/baselode/: extent.py
src/baselode/drill/: data.py  desurvey.py  view.py
test/: conftest.py  test_blockmodel.py  test_colours.py  test_columns.py  test_drill.py  test_grade_blocks.py  test_parity_contract.py  test_structural.py
test/data/: parity_contract.json  structural_points_sample.csv
test/data/blockmodel/: demo_blockmodel.csv  demo_blockmodel_meta.json
test/data/grade_blocks/: demo_grade_blocks.json
test/data/gswa/: README.md  gswa_sample_collars.csv  gswa_sample_geology.csv
