[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baselode"
version = "0.1.0"
description = "Domain-aware data models and utilities for exploration and mining datasets."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Tamara Vasey" }, { name = "Darkmine Pty Ltd"}]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "plotly>=5.0",
    "geopandas>=0.13",
    "pyproj>=3.4",
    "folium>=0.15",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12.0"]
sql = ["sqlalchemy>=2.0"]
all = ["pyarrow>=12.0", "sqlalchemy>=2.0"]


[project.urls]
Homepage = "https://github.com/darkmine-oss/baselode"
Repository = "https://github.com/darkmine-oss/baselode"
Issues = "https://github.com/darkmine-oss/baselode/issues"

[tool.setuptools.packages.find]
where = ["src"]
