[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baselode"
version = "0.1.0"
description = "Domain-aware data models and utilities for exploration and mining datasets."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Tamara Vasey" }, { name = "Darkmine Pty Ltd"}]


[project.urls]
Homepage = "https://github.com/darkmine-oss/baselode"
Repository = "https://github.com/darkmine-oss/baselode"
Issues = "https://github.com/darkmine-oss/baselode/issues"

[tool.setuptools.packages.find]
where = ["src"]
