[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baselode"
version = "0.1.0"
description = "Domain-aware data models and utilities for exploration and mining datasets."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Tamara Vasey" }]

[tool.setuptools.packages.find]
where = ["."]
